--- a/src/sass/base/_basic.scss
+++ b/src/sass/base/_basic.scss
@@ -38,3 +38,9 @@ html {
     max-width: 947px;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 980px) {
+    .container {
+        padding: 0 10px;
+    }
+}
