--- a/src/sass/block/_advantages.scss
+++ b/src/sass/block/_advantages.scss
@@ -68,3 +68,26 @@
         }
     }
 }
+
+@media screen and (max-width: 576px) {
+    .advantages {
+        padding: 60px 0;
+
+        &__wrapper {
+            margin-top: 50px;
+            flex-direction: column;
+            align-items: center;
+            gap: 40px 0;
+        }
+
+        &__item {
+            & h3 {
+                margin-top: 15px;
+            }
+
+            & p {
+                margin-top: 10px;
+            }
+        }
+    }
+}
