--- a/src/sass/block/_header.scss
+++ b/src/sass/block/_header.scss
@@ -43,3 +43,25 @@
     }
 
 }
+
+@media screen and (max-width: 576px) {
+    .header {
+        &__logo {
+            max-width: 200px;
+        }
+
+        &__suptext {
+            font-size: 10px;
+        }
+
+        &__subtext {
+            font-size: 14px;
+        }
+
+        &__contact {
+            & a {
+                font-size: 14px;
+            }
+        }
+    }
+}
