--- a/src/sass/block/_advantages.scss
+++ b/src/sass/block/_advantages.scss
@@ -69,6 +69,26 @@
     }
 }
 
+@media screen and (max-width: 950px) {
+    .advantages {
+
+        &__wrapper {
+            gap: 0 5px;
+        }
+    }
+}
+
+@media screen and (max-width: 830px) {
+    .advantages {
+
+        &__wrapper {
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px
+        }
+    }
+}
+
 @media screen and (max-width: 576px) {
     .advantages {
         padding: 60px 0;
