--- a/src/sass/block/_header.scss
+++ b/src/sass/block/_header.scss
@@ -44,6 +44,15 @@
 
 }
 
+@media screen and (max-width: 692px) {
+    .header {
+
+        &__distributor {
+            display: none;
+        }
+    }
+}
+
 @media screen and (max-width: 576px) {
     .header {
         &__logo {
@@ -62,6 +71,14 @@
             & a {
                 font-size: 14px;
             }
+        }
+    }
+}
+
+@media screen and (max-width: 484px) {
+    .header {
+        &__logo {
+            max-width: 150px;
         }
     }
 }
