--- a/src/sass/block/_promo.scss
+++ b/src/sass/block/_promo.scss
@@ -74,6 +74,14 @@
     }
 }
 
+@media screen and (max-width: 692px) {
+    .promo {
+        &__title {
+            margin-top: 75px;
+        }
+    }
+}
+
 @media screen and (max-width: 576px) {
     .promo {
         background-position-x: 1%;
@@ -82,7 +90,6 @@
         &__title {
             font-size: 38px;
             text-align: center;
-            margin-top: 75px;
         }
 
         &__subtitle {
@@ -96,6 +103,30 @@
 
         &__link {
             font-size: 14px;
+        }
+    }
+}
+
+@media screen and (max-width: 484px) {
+    .promo {
+        padding-bottom: 40px;
+
+        &__title {
+            margin-top: 50px;
+            font-size: 28px;
+        }
+
+        &__subtitle {
+            font-size: 14px;
+            margin-top: 10px;
+        }
+
+        &__wrapper {
+            margin-top: 55px;
+        }
+
+        &__btn {
+            margin-top: 60px;
         }
     }
 }
