feat: add consultation section

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,10 @@
 
 @use 'block/promo';
 @use 'block/header';
+
 @use 'block/advantages';
+
+@use 'block/consultation';
+@use 'block/form';
 
 @use 'ui/buttons.scss';
