--- a/src/sass/block/_consultation.scss
+++ b/src/sass/block/_consultation.scss
@@ -21,3 +21,40 @@
         line-height: 30px;
     }
 }
+
+@media screen and (max-width:850px) {
+    .consultation {
+        padding: 80px 0;
+
+        &__title {
+            font-size: 32px;
+        }
+    }
+}
+
+@media screen and (max-width:520px) {
+    .consultation {
+        padding: 60px 0;
+
+        &__title {
+            font-size: 20px;
+        }
+
+        &__text {
+            font-size: 16px;
+        }
+    }
+}
+
+@media screen and (max-width:375px) {
+    .consultation {
+
+        &__title {
+            font-size: 16px;
+        }
+
+        &__text {
+            font-size: 14px;
+        }
+    }
+}
